--- a/Slipstream WatchKit Extension/Info.plist
+++ b/Slipstream WatchKit Extension/Info.plist
@@ -12,5 +12,11 @@
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.watchkit</string>
 	</dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
+	<key>WKBackgroundModes</key>
+	<array/>
 </dict>
 </plist>
