--- a/Slipstream.xcodeproj/xcshareddata/xcschemes/Slipstream WatchKit App (Complication).xcscheme
+++ b/Slipstream.xcodeproj/xcshareddata/xcschemes/Slipstream WatchKit App (Complication).xcscheme
@@ -55,8 +55,10 @@
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES"
       launchAutomaticallySubstyle = "32">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <RemoteRunnable
+         runnableDebuggingMode = "2"
+         BundleIdentifier = "com.apple.Carousel"
+         RemotePath = "/Slipstream WatchKit App">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "CFBACFF627E88F0800851E20"
@@ -64,7 +66,7 @@
             BlueprintName = "Slipstream WatchKit App"
             ReferencedContainer = "container:Slipstream.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </RemoteRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -73,8 +75,10 @@
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES"
       launchAutomaticallySubstyle = "32">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <RemoteRunnable
+         runnableDebuggingMode = "2"
+         BundleIdentifier = "com.apple.Carousel"
+         RemotePath = "/Slipstream WatchKit App">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "CFBACFF627E88F0800851E20"
@@ -82,7 +86,16 @@
             BlueprintName = "Slipstream WatchKit App"
             ReferencedContainer = "container:Slipstream.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </RemoteRunnable>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "CFBACFF627E88F0800851E20"
+            BuildableName = "Slipstream WatchKit App.app"
+            BlueprintName = "Slipstream WatchKit App"
+            ReferencedContainer = "container:Slipstream.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
