--- a/Slipstream.xcodeproj/xcshareddata/xcschemes/Slipstream WatchKit App (Notification).xcscheme
+++ b/Slipstream.xcodeproj/xcshareddata/xcschemes/Slipstream WatchKit App (Notification).xcscheme
@@ -56,8 +56,10 @@
       allowLocationSimulation = "YES"
       launchAutomaticallySubstyle = "8"
       notificationPayloadFile = "Slipstream WatchKit Extension/PushNotificationPayload.apns">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <RemoteRunnable
+         runnableDebuggingMode = "2"
+         BundleIdentifier = "com.apple.Carousel"
+         RemotePath = "/Slipstream WatchKit App">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "CFBACFF627E88F0800851E20"
@@ -65,7 +67,7 @@
             BlueprintName = "Slipstream WatchKit App"
             ReferencedContainer = "container:Slipstream.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </RemoteRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -75,8 +77,10 @@
       debugDocumentVersioning = "YES"
       launchAutomaticallySubstyle = "8"
       notificationPayloadFile = "Slipstream WatchKit Extension/PushNotificationPayload.apns">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <RemoteRunnable
+         runnableDebuggingMode = "2"
+         BundleIdentifier = "com.apple.Carousel"
+         RemotePath = "/Slipstream WatchKit App">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "CFBACFF627E88F0800851E20"
@@ -84,7 +88,16 @@
             BlueprintName = "Slipstream WatchKit App"
             ReferencedContainer = "container:Slipstream.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </RemoteRunnable>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "CFBACFF627E88F0800851E20"
+            BuildableName = "Slipstream WatchKit App.app"
+            BlueprintName = "Slipstream WatchKit App"
+            ReferencedContainer = "container:Slipstream.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
