--- a/Slipstream/Slipstream.xcodeproj/xcshareddata/xcschemes/Slipstream Watch App.xcscheme
+++ b/Slipstream/Slipstream.xcodeproj/xcshareddata/xcschemes/Slipstream Watch App.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1410"
-   version = "1.3">
+   LastUpgradeVersion = "1430"
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -14,9 +14,23 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "420967ED294C9A8D0075D75E"
+               BlueprintIdentifier = "CFAFFD8D2A619DF900BA7B51"
+               BuildableName = "Slipstream Watch App.app"
+               BlueprintName = "Slipstream Watch App"
+               ReferencedContainer = "container:Slipstream.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "CFAFFD872A619DF900BA7B51"
                BuildableName = "Slipstream.app"
-               BlueprintName = "Slipstream_watch"
+               BlueprintName = "Slipstream"
                ReferencedContainer = "container:Slipstream.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -26,31 +40,8 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
-      <Testables>
-         <TestableReference
-            skipped = "NO"
-            parallelizable = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "420967FF294C9A8F0075D75E"
-               BuildableName = "Slipstream_watchAppTests.xctest"
-               BlueprintName = "Slipstream_watchAppTests"
-               ReferencedContainer = "container:Slipstream.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO"
-            parallelizable = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "42096809294C9A900075D75E"
-               BuildableName = "Slipstream_watchUITests.xctest"
-               BlueprintName = "Slipstream_watchUITests"
-               ReferencedContainer = "container:Slipstream.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-      </Testables>
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      shouldAutocreateTestPlan = "YES">
    </TestAction>
    <LaunchAction
       buildConfiguration = "Release"
@@ -61,14 +52,15 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
-      allowLocationSimulation = "YES">
+      allowLocationSimulation = "YES"
+      notificationPayloadFile = "PushNotificationPayload.apns">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "420967ED294C9A8D0075D75E"
-            BuildableName = "Slipstream.app"
-            BlueprintName = "Slipstream_watch"
+            BlueprintIdentifier = "CFAFFD8D2A619DF900BA7B51"
+            BuildableName = "Slipstream Watch App.app"
+            BlueprintName = "Slipstream Watch App"
             ReferencedContainer = "container:Slipstream.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -83,9 +75,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "420967ED294C9A8D0075D75E"
-            BuildableName = "Slipstream.app"
-            BlueprintName = "Slipstream_watch"
+            BlueprintIdentifier = "CFAFFD8D2A619DF900BA7B51"
+            BuildableName = "Slipstream Watch App.app"
+            BlueprintName = "Slipstream Watch App"
             ReferencedContainer = "container:Slipstream.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
