--- a/Slipstream Watch App/Resources/swiftgen.yml
+++ b/Slipstream Watch App/Resources/swiftgen.yml
@@ -1,7 +1,7 @@
 strings:
-  inputs: ${PROJECT_DIR}/Shared/Resources/en.lproj
+  inputs: ${PROJECT_DIR}/Slipstream Watch App/Resources/en.lproj
   outputs:
     - templateName: structured-swift5
-      output: ${PROJECT_DIR}/Shared/Resources/Localization.swift
+      output: ${PROJECT_DIR}/Slipstream Watch App/Resources/Localization.swift
       params:
         enumName: Localization
