--- a/Slipstream.xcodeproj/xcshareddata/xcschemes/Slipstream Watch App.xcscheme
+++ b/Slipstream.xcodeproj/xcshareddata/xcschemes/Slipstream Watch App.xcscheme
@@ -47,7 +47,7 @@
       buildConfiguration = "Release"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      region = "US"
+      region = "PT"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
